--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,16 @@
         <activity android:name=".EventActivity"></activity>
         <activity android:name=".SingleTask" />
         <activity android:name=".AddTask"></activity>
+        <activity android:name=".RoutineActivity"
+            android:parentActivityName=".HomeActivity"></activity>
+        <activity android:name=".AddTask"></activity>
+        <activity android:name=".Monday"></activity>
+        <activity android:name=".Tuesday"></activity>
+        <activity android:name=".Wednesday"></activity>
+        <activity android:name=".Thursday"></activity>
+        <activity android:name=".Friday"></activity>
+        <activity android:name=".Saturday"></activity>
+        <activity android:name=".Sunday"></activity>
 
         <service
             android:name=".AlarmService"
