--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".EventActivity"></activity>
         <activity android:name=".SingleTask" />
         <activity android:name=".AddTask"></activity>
+        <activity android:name=".RoutineCreate"></activity>
         <activity android:name=".RoutineActivity"
             android:parentActivityName=".HomeActivity"></activity>
 
