--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     //For adding side drawer
     implementation 'com.android.support:design:26.1.0'
+    compile 'com.basgeekball:awesome-validation:1.3'
 
 }
 apply plugin: 'com.google.gms.google-services'
