--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
-
-
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -18,8 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,21 +25,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".HomeActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
-        <activity android:name=".LogoutActivity"></activity>
-        <activity android:name=".EventActivity"></activity>
+        <activity
+            android:name=".HomeActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".LogoutActivity" />
+        <activity android:name=".EventActivity" />
         <activity android:name=".SingleTask" />
-        <activity android:name=".AddTask"></activity>
-        <activity android:name=".RoutineCreate"></activity>
-        <activity android:name=".RoutineActivity"
-            android:parentActivityName=".HomeActivity"></activity>
-
-        <activity android:name=".SignUpActivity"></activity>
-
-
+        <activity android:name=".AddTask" />
+        <activity android:name=".RoutineCreate" />
+        <activity
+            android:name=".RoutineActivity"
+            android:parentActivityName=".HomeActivity" />
+        <activity android:name=".SignUpActivity" />
 
         <service
             android:name=".AlarmService"
@@ -51,6 +46,8 @@
             android:name=".AlarmReceiver"
             android:enabled="true"
             android:exported="true" />
+
+        <activity android:name=".AssignmentActivity"></activity>
     </application>
 
 </manifest>
