--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,8 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".AssignmentActivity"></activity>
+        <activity android:name=".AssignmentAdderActivity" />
+        <activity android:name=".AssignmentView1"></activity>
     </application>
 
 </manifest>
