Added parent activity for AssignmentView1

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,8 @@
             android:exported="true" />
 
         <activity android:name=".AssignmentAdderActivity" />
-        <activity android:name=".AssignmentView1" />
+        <activity android:name=".AssignmentView1"
+            android:parentActivityName=".HomeActivity"/>
         <activity android:name=".SingleAssignment"></activity>
     </application>
 
