update fuction has been created for the routine and assignment and some minor changes has been done. App name has been change to BeOnTime.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,8 @@
         <activity
             android:name=".onPlannerDate"
             android:parentActivityName=".HomeActivity" />
-        <activity android:name=".UpdateRoutine"></activity>
+        <activity android:name=".UpdateRoutine" />
+        <activity android:name=".UpdateAssignment"></activity>
     </application>
 
 </manifest>
