--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
 
     <application
         android:allowBackup="true"
@@ -44,8 +45,7 @@
 
         <receiver
             android:name=".AlarmReceiver"
-            android:enabled="true"
-            android:exported="true" />
+            android:process=":remote" />
 
         <activity android:name=".AssignmentAdderActivity" />
         <activity android:name=".UpdateAssignment" />
